<resources>
    <string name="app_name">Astrophoto Log</string>

    <string name="user_name">luka@astrophoto.com</string>
    <string name="my_astrophotos">My Astrophotos</string>
    <string name="edit_equipment">Edit Equipment</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Give us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>


</resources>
